cmake_minimum_required(VERSION 3.19)
project(Articulation_points_and_bridges)

set(CMAKE_CXX_STANDARD 17)

add_executable(Components_Adjacency_list Components/Adjacency_list/Adjacency_list.cpp)
add_executable(Components_Adjacency_matrix Components/Adjacency_matrix/Adjacency_matrix.cpp)
add_executable(Components_Ribs_list Components/Ribs_list/Ribs_list.cpp)
add_executable(AM_to_AL Translation/AM_to_AL/AM_to_AL.cpp)
add_executable(Tops_Adjacency_list Articulation_tops/Adjacency_list/Adjacency_list.cpp)
add_executable(Tops_Adjacency_matrix Articulation_tops/Adjacency_matrix/Adjacency_matrix.cpp)
add_executable(Tops_Ribs_list Articulation_tops/Ribs_list/Ribs_list.cpp)
add_executable(Bridges_Adjacency_list Bridges/Adjacency_list/Adjacency_list.cpp)
add_executable(Bridges_Adjacency_matrix Bridges/Adjacency_matrix/Adjacency_matrix.cpp)
add_executable(Bridges_Ribs_list Bridges/Ribs_list/Ribs_list.cpp)
add_executable(Time Testing/Test_time/Time.cpp)
add_executable(Memory Testing/Test_memory/Memory.cpp)
add_executable(Memory2 Testing/Test_memory2/Memory2.cpp)
add_executable(Memory3 Testing/Test_memory2/Memory3.cpp)