cmake_minimum_required(VERSION 3.19)
project(Articulation_points_and_bridges)

set(CMAKE_CXX_STANDARD 17)

add_executable(Components_AL Components/Adjacency_list/Adjacency_list.cpp)
add_executable(Components_AM Components/Adjacency_matrix/Adjacency_matrix.cpp)
add_executable(Components_RL Components/Ribs_list/Ribs_list.cpp)
add_executable(AM_to_AL Translation/AM_to_AL/AM_to_AL.cpp)
add_executable(Tops_AL Articulation_tops/Adjacency_list/Adjacency_list.cpp)
add_executable(Tops_AM Articulation_tops/Adjacency_matrix/Adjacency_matrix.cpp)
add_executable(Tops_RL Articulation_tops/Ribs_list/Ribs_list.cpp)
add_executable(Bridges_AL Bridges/Adjacency_list/Adjacency_list.cpp)
add_executable(Bridges_AM Bridges/Adjacency_matrix/Adjacency_matrix.cpp)
add_executable(Bridges_RL Bridges/Ribs_list/Ribs_list.cpp)
add_executable(Time Testing/Test_time/Time.cpp)
add_executable(Memory Testing/Test_memory/Memory.cpp)
add_executable(Memory2 Testing/Test_memory2/Memory2.cpp)
add_executable(Memory3 Testing/Test_memory2/Memory3.cpp)
add_executable(Tests_generator Testing/Tests_generator/Tests_generator.cpp)
add_executable(Random Testing/Test_random/Random.cpp)
add_executable(Tester Testing/Tester/Tester.cpp)